# 2025Intern2Sumi

./: README.md  pyproject.toml  sample.ipynb  sampleGP.ipynb  sampleRadar.ipynb
data/: ibiECG_event1_sub1.mat  ibiECG_event2_sub1.mat  ibiECG_event2_sub2.mat  ibiECG_event2_sub3.mat  ibiECG_event2_sub4.mat  ibiECG_event2_sub5.mat  ibiECG_sub2.mat  ibiECG_sub3.mat  ibiECG_sub4.mat  ibiECG_sub5.mat  radarIBI_event1_sub1.mat  radarIBI_event1_sub2.mat  radarIBI_event1_sub3.mat  radarIBI_event2_sub1.mat  radarIBI_event2_sub2.mat  radarIBI_event2_sub3.mat  radarIBI_event2_sub4.mat  radarIBI_event2_sub5.mat  radarIBI_sub4.mat  radarIBI_sub5.mat
src/: calc_rmse.py  calc_tcr.py
